--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "native-base": "^2.13.12",
     "react": "16.11.0",
     "react-native": "^0.62.2",
+    "react-native-communications": "^2.2.1",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-modal": "^11.5.6",
