--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "16.11.0",
     "react-native": "^0.62.2",
     "react-native-communications": "^2.2.1",
+    "react-native-elements": "^2.0.3",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-modal": "^11.5.6",
