--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel-jest": "^26.1.0",
     "eslint": "^7.3.1",
     "jest": "^26.1.0",
+    "jetifier": "^1.6.6",
     "metro-react-native-babel-preset": "^0.59.0",
     "react-test-renderer": "16.11.0"
   },
