--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.7",
     "react-native-screens": "^2.9.0",
+    "react-native-sms": "^1.11.0",
     "react-native-vector-icons": "^6.6.0"
   },
   "devDependencies": {
