--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-safe-area-context": "^3.0.7",
     "react-native-screens": "^2.9.0",
     "react-native-sms": "^1.11.0",
+    "react-native-update-gradle": "^1.2.0",
     "react-native-vector-icons": "^6.6.0"
   },
   "devDependencies": {
