--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/cli-platform-android": "^4.10.1",
     "@react-native-community/datetimepicker": "^2.4.3",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/bottom-tabs": "^5.7.1",
     "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.6.2",
     "link": "^0.1.5",
